src/objects/c2g__codaDocumentLineVolumeSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>Document Line Volume Settings (FF)</description>
    <fields>
        <fullName>c2g__AllocationLinesLimit__c</fullName>
        <label>Allocation Transaction Line Items Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentSelectionRetrievedLimit__c</fullName>
        <label>Payment Selection Retrieved Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__SalesCreditNoteBatchLineLimit__c</fullName>
        <label>Sales Credit Note Batch Line Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__SalesInvoiceBatchLineLimit__c</fullName>
        <label>Sales Invoice Batch Line Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__YearEndBSBatchSize__c</fullName>
        <label>Year End BS Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__YearEndLinesRetrievedLimit__c</fullName>
        <label>Year End Lines Retrieved Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__YearEndPLBatchSize__c</fullName>
        <label>Year End P&amp;L Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__YearEndPostBatchSize__c</fullName>
        <label>Year End Post Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__YearEndReverseJournalsBatchSize__c</fullName>
        <label>Year End Reverse Journals Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Document Line Volume Settings (FF)</label>
</CustomObject>